--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,26 +1,17 @@
-name: Terraform Workflow
+name: Terraform Deploy
 
 on:
-  push:
-    branches: [ main ]
-  workflow_dispatch: # Allows manual trigger for deployment
+  workflow_dispatch:
 
 jobs:
-  run-tests:
+  terraform:
+    name: Terraform Plan & Apply
     runs-on: ubuntu-latest
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v3
 
-      - name: Run tests
-        run: |
-          echo "Add your test command here"
-          # Example: pytest or npm test
-          echo "Tests passed!"
+    defaults:
+      run:
+        working-directory: backend-setup
 
-  terraform-plan:
-    needs: run-tests
-    runs-on: ubuntu-latest
     steps:
       - name: Checkout code
         uses: actions/checkout@v3
@@ -32,31 +23,16 @@ jobs:
 
       - name: Terraform Init
         run: terraform init
+
+      - name: Terraform Format Check
+        run: terraform fmt -check
+
+      - name: Terraform Validate
+        run: terraform validate
 
       - name: Terraform Plan
         run: terraform plan
-        env:
-          AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
-          AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
 
-  terraform-apply:
-    if: github.event_name == 'workflow_dispatch'
-    needs: terraform-plan
-    runs-on: ubuntu-latest
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v3
-
-      - name: Set up Terraform
-        uses: hashicorp/setup-terraform@v3
-        with:
-          terraform_version: 1.6.6
-
-      - name: Terraform Init
-        run: terraform init
-
-      - name: Terraform Apply
+      - name: Terraform Apply (Manual Approval)
+        if: github.event.inputs.auto_apply == 'true'
         run: terraform apply -auto-approve
-        env:
-          AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
-          AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
